--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
     <string name="app_name">CustomIconHelperX</string>
+
     <string name="add">Add</string>
     <string name="value_is">Value: %d</string>
     <string name="user_input">Input something…</string>
     <string name="image_content_description">Yeeeeeeee</string>
     <string name="image_button">click this to change image</string>
+    <string name="button_to_icon_select">To Icon Select</string>
+
+    <string name="label_icon_select">IconSelect</string>
 </resources>
