✨ Now can get local app list

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,6 +2,8 @@
 <resources>
     <string name="app_name">自定义图标助手X</string>
     <string name="add">添加</string>
+    <string name="done">完成</string>
+    <string name="back">返回</string>
     <string name="value_is">当前值: %d</string>
     <string name="user_input">说些什么吧......</string>
     <string name="image_content_description">哦哦哦哦哦哦哦</string>
