--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="add">Add</string>
     <string name="done">Done</string>
     <string name="back">Back</string>
+    <string name="error">Error</string>
+    <string name="default_error_msg">Error occurred…</string>
+
     <string name="value_is">Value: %d</string>
     <string name="user_input">Input something…</string>
     <string name="image_content_description">Yeeeeeeee</string>
