--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CustomShortcutHelperX</string>
+    <string name="app_name">Wukong</string>
 
     <string name="add">Add</string>
     <string name="done">Done</string>
