--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">悟空</string>
+    <string name="app_name">悟空Demo</string>
 
     <string name="add">添加</string>
     <string name="done">完成</string>
